--- a/Pages/car-Managment/carList.html
+++ b/Pages/car-Managment/carList.html
@@ -12,17 +12,14 @@
   <div class="container">
     <h2>السيارات</h2>
     <p class="total-cars">إجمالي السيارات: <span id="total-count">0</span></p>
-
-    <!-- Car Cards Container -->
-    <div id="cars-container" class="cards-container"></div>
-
+    
     <!-- Actions: Search, Filter, Add, Refresh -->
     <div class="actions">
       <input type="text" id="search" placeholder="بحث..." onkeyup="searchCars()" />
       <select id="filter-select" onchange="filterCars()">
-        <option value="all" selected>الجميع</option>
-        <option value="متاحة">متاحة</option>
-        <option value="غير متاحة">غير متاحة</option>
+        <option value="0" selected>الجميع</option>
+        <option value="1">متاحة</option>
+        <option value="2">غير متاحة</option>
       </select>
 
       <button onclick="openPop()">+ إضافة سيارة</button>
@@ -38,6 +35,7 @@
       <span>المستشفى</span>
       <span>الحالة</span>
     </div>
+    <div id="cars-container" class="cards-container"></div>
   </div>
 
   <!-- popup model -->
@@ -51,8 +49,8 @@
       <select id="car-type">
         <option value="">-- اختر نوع السيارة --</option>
         <option value="0">سيدان</option>
-        <option value="1">راكب واحد</option>
-        <option value="2">2 راكب </option>
+        <option value="1">1 كبينة</option>
+        <option value="2">2 كبينة </option>
         <option value="3"> شاحنة</option>
         <option value="4"> ميكروباص</option>
         <option value="5"> ميني باص</option>
@@ -63,9 +61,9 @@
       <input type="text" id="car-task" placeholder="المهمة المعنية" />
       <select id="car-status">
         <option value="">-- اختر الحالة --</option>
-        <option value="0">نشط</option>
-        <option value="1">غير نشط</option>
-        <option value="2">حالة صيانه/option>
+        <option value="0">متاح</option>
+        <option value="1">مشغول</option>
+        <option value="2">حالة صيانة</option>
       </select>
       <input type="number" id="car-kilometers" placeholder="إجمالي الكيلومترات" />
       <select id="fuel-type">
@@ -76,13 +74,12 @@
       <input type="number" id="fuel-consumption" placeholder="معدل استهلاك الوقود" />
       <input type="number" id="oil-consumption" placeholder="معدل استهلاك الزيت" />
       <div class="modal-actions">
-        <button onclick="submitBus()">حفظ</button>
+        <button onclick="submitVehicle()">حفظ</button>
         <button onclick="closePop()">إلغاء</button>
       </div>
     </div>
   </div>
 
-  <script src="../../Java script/car-Managment/carList.js"></script>
 </body>
-
+  <script src="../../Java script/car-Managment/carList.js"></script>
 </html>
