--- a/Pages/disposalList.html
+++ b/Pages/disposalList.html
@@ -11,20 +11,20 @@
       <h1 class="page-title">المستهلكات</h1>
 
       <div class="header">
-        <h2>إجمالي المستهلكات: <span id="total">0</span></h2>
+        <h2>إجمالي المستهلكات <span id="total">0</span></h2>
         <div class="actions">
-          <button id="addBtn">➕ إضافة</button>
+          <button id="addBtn" onclick="openPop()">➕ إضافة</button>
           <button id="refreshBtn">🔄 تحديث</button>
           <input type="text" id="search" placeholder="بحث..." />
         </div>
       </div>
 
       <div class="content">
-        <div class="parts-list">
-          <ul id="parts"></ul>
+        <div class="consumables-list">
+          <ul id="consumables"></ul>
         </div>
 
-        <div class="cards-container" id="cardsContainer"></div>
+        <div class="cards-container" id="consumablesCards"></div>
       </div>
 
       <!-- Popup -->
@@ -32,26 +32,29 @@
         <div class="popup-content">
           <h3>إضافة / تعديل قطعة</h3>
           <label>اسم القطعة:</label>
-          <input type="text" id="newPartName" />
-          <label>نوع السيارة:</label>
+          <input type="text" id="newconsumableName" />
+          <!-- <label>نوع السيارة:</label>
           <input type="text" id="newCarType" />
-          <label>الكود:</label>
-          <input type="text" id="newCode" />
+          <label>الكود:</label> -->
+          <!-- <input type="text" id="newCode" /> -->
           <label>الكمية:</label>
           <input type="number" id="newQuantity" />
           <label>العمر الافتراضي (يوم):</label>
           <input type="number" id="newLifetime" />
-          <label>التكلفة:</label>
-          <input type="number" id="newCost" />
+          <!-- <label>التكلفة:</label>
+          <input type="number" id="newCost" /> -->
 
           <div class="popup-buttons">
-            <button id="submitAddPart">حفظ</button>
-            <button id="cancelAddPart">إلغاء</button>
+            <button id="addBtnSubmit" onclick="addPart()">➕ إضافة</button>
+            <button id="editBtnSubmit" onclick="updatePart()" class="hidden">
+              ✏️ تعديل
+            </button>
+            <button onclick="closePop()">إلغاء</button>
           </div>
         </div>
       </div>
     </div>
 
-    <script src="../Java script/disposalList.js"></script>
+    <script type="module" src="../Java script/disposalList.js"></script>
   </body>
 </html>
