Fix: Fixing the direction of the text in login and sharedlayout pages to make it Arabic direction

--- a/Pages/sharedLayout.html
+++ b/Pages/sharedLayout.html
@@ -19,7 +19,8 @@
       </div>
     </div>
     <div class="sidebar">
-      <h2 class="logo">Fleet Track</h2>
+      <h2 class="logo ">Move Smart</h2>
+      <h2 class="logo">نظام التحكم في السيارات</h2>
       <button class="create-order">إنشاء طلب</button>
       <ul class="menu">
         <li class="active" onclick="changeContent('home')">
