Adding role based dashboard redirection to the system

--- a/Pages/disposalList.html
+++ b/Pages/disposalList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>المستهلكات</title>
-    <link rel="stylesheet" href="../Assets/Styles/disposalList.css" />
+    <link rel="stylesheet" href="../../Assets/Styles/disposalList.css" />
   </head>
   <body>
     <div class="container">
@@ -55,6 +55,6 @@
       </div>
     </div>
 
-    <script type="module" src="../Java script/disposalList.js"></script>
+    <script type="module" src="../../Java script/disposalList.js"></script>
   </body>
 </html>
