Editing the superuser dashboard

--- a/Pages/dash-Boards/superUserDashboard.html
+++ b/Pages/dash-Boards/superUserDashboard.html
@@ -39,10 +39,10 @@
                             <span class="stat-number" id="totalUsers">125</span>
                             <span class="stat-label">إجمالي المستخدمين</span>
                         </div>
-                        <div class="stat-item">
+                        <!-- <div class="stat-item">
                             <span class="stat-number" id="activeUsers">98</span>
                             <span class="stat-label">المستخدمين النشطين</span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="card-arrow">
@@ -62,10 +62,10 @@
                             <span class="stat-number" id="totalCars">1283</span>
                             <span class="stat-label">إجمالي السيارات</span>
                         </div>
-                        <div class="stat-item">
+                        <!-- <div class="stat-item">
                             <span class="stat-number" id="activeCars">1256</span>
                             <span class="stat-label">السيارات النشطة</span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="card-arrow">
@@ -75,7 +75,7 @@
 
             <div class="info-card" onclick="navigateToSection('drivers')">
                 <div class="card-icon">
-                    <img src="../../Assets/Images/users.svg" alt="Drivers" />
+                    <img src="../../Assets/Images/driver.svg" alt="Drivers" />
                 </div>
                 <div class="card-content">
                     <h3>معلومات السائقين</h3>
@@ -85,9 +85,85 @@
                             <span class="stat-number" id="totalDrivers">156</span>
                             <span class="stat-label">إجمالي السائقين</span>
                         </div>
-                        <div class="stat-item">
+                        <!-- <div class="stat-item">
                             <span class="stat-number" id="activeDrivers">134</span>
                             <span class="stat-label">السائقين المتاحين</span>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="card-arrow">
+                    <img src="../../Assets/Images/arrow-right.svg" alt="Navigate" />
+                </div>
+            </div>
+
+            <div class="info-card" onclick="navigateToSection('applications')">
+                <div class="card-icon">
+                    <img src="../../Assets/Images/application.svg" alt="Applications" />
+                </div>
+                <div class="card-content">
+                    <h3>معلومات الطلبات</h3>
+                    <p class="card-description">إدارة جميع الطلبات في النظام</p>
+                    <div class="card-stats">
+                        <div class="stat-item">
+                            <span class="stat-number" id="totalApplications">125</span>
+                            <span class="stat-label">إجمالي الطلبات</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-arrow">
+                    <img src="../../Assets/Images/arrow-right.svg" alt="Navigate" />
+                </div>
+            </div>
+
+            <div class="info-card" onclick="navigateToSection('consumables')">
+                <div class="card-icon">
+                    <img src="../../Assets/Images/disposal.svg" alt="Consumables" />
+                </div>
+                <div class="card-content">
+                    <h3>معلومات المستهلكات</h3>
+                    <p class="card-description">إدارة جميع المستهلكات في النظام</p>
+                    <div class="card-stats">
+                        <div class="stat-item">
+                            <span class="stat-number" id="totalConsumables">125</span>
+                            <span class="stat-label">إجمالي المستهلكات</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-arrow">
+                    <img src="../../Assets/Images/arrow-right.svg" alt="Navigate" />
+                </div>
+            </div>
+
+            <div class="info-card" onclick="navigateToSection('spareParts')">
+                <div class="card-icon">
+                    <img src="../../Assets/Images/spareParts.svg" alt="SpareParts" />
+                </div>
+                <div class="card-content">
+                    <h3>معلومات قطع الغيار</h3>
+                    <p class="card-description">إدارة جميع قطع الغيار في النظام</p>
+                    <div class="card-stats">
+                        <div class="stat-item">
+                            <span class="stat-number" id="totalSpareParts">125</span>
+                            <span class="stat-label">إجمالي قطع الغيار</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-arrow">
+                    <img src="../../Assets/Images/arrow-right.svg" alt="Navigate" />
+                </div>
+            </div>
+
+            <div class="info-card" onclick="navigateToSection('reports')">
+                <div class="card-icon">
+                    <img src="../../Assets/Images/report.svg" alt="Reports" />
+                </div>
+                <div class="card-content">
+                    <h3>معلومات التقارير</h3>
+                    <p class="card-description">إدارة جميع التقارير في النظام</p>
+                    <div class="card-stats">
+                        <div class="stat-item">
+                            <span class="stat-number" id="totalReports">125</span>
+                            <span class="stat-label">إجمالي التقارير</span>
                         </div>
                     </div>
                 </div>
